plugins {
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.jmonkeyengine'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
	implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.3'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.0.3'
}

test {
	useJUnitPlatform()
}
